tests/compiler/errors/11-array-initialization-mismatch.jsa
// jastat-summary: Error on array size mismatch with initializer
// jastat: mode=compiler, capture=stderr

let arr: i32[3] = {1, 2};  // Size mismatch: declared 3, initialized 2
